--- a/trunk/setup.cfg
+++ b/trunk/setup.cfg
@@ -3,6 +3,12 @@ xml_output = build/test-results.xml
 coverage_summary = build/test-coverage.txt
 coverage_dir = build/coverage
 
+[pyerpunittest]
+xml_output = build/test-results.xml
+coverage_summary = build/test-coverage.txt
+coverage_dir = build/coverage
+
+
 [egg_info]
 tag_build = 
 tag_date = false
