--- a/trunk/setup.cfg
+++ b/trunk/setup.cfg
@@ -7,7 +7,7 @@ coverage_dir = build/coverage
 xml_output = build/test-results.xml
 coverage_summary = build/test-coverage.txt
 coverage_dir = build/coverage
-
+django_settings = tests.settings
 
 [egg_info]
 tag_build = 
