--- a/trunk/setup.cfg
+++ b/trunk/setup.cfg
@@ -1,12 +1,13 @@
 [unittest]
-xml_output = build/test-results.xml
-coverage_summary = build/test-coverage.txt
-coverage_dir = build/coverage
+#xml_output = build/test-results.xml
+#coverage_summary = build/test-coverage.txt
+#coverage_dir = build/coverage
 
 [pyerpunittest]
-xml_output = build/test-results.xml
-coverage_summary = build/test-coverage.txt
-coverage_dir = build/coverage
+#xml_output = build/test-results.xml
+#coverage_summary = build/test-coverage.txt
+#coverage_dir = build/coverage
+#coverage-method = figleaf
 django_settings = tests.settings
 
 [egg_info]
