修改了，执行 python setup.py pyerpunittest 时不需要收集覆盖率的问题

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,13 @@
 [unittest]
-xml_output = build/test-results.xml
-coverage_summary = build/test-coverage.txt
-coverage_dir = build/coverage
+#xml_output = build/test-results.xml
+#coverage_summary = build/test-coverage.txt
+#coverage_dir = build/coverage
 
 [pyerpunittest]
-xml_output = build/test-results.xml
-coverage_summary = build/test-coverage.txt
-coverage_dir = build/coverage
+#xml_output = build/test-results.xml
+#coverage_summary = build/test-coverage.txt
+#coverage_dir = build/coverage
+#coverage-method = figleaf
 django_settings = tests.settings
 
 [egg_info]
